Fixed gaps between dividers

--- a/style.css
+++ b/style.css
@@ -1,18 +1,22 @@
-body {
+* {
 	margin: 0;
 	padding: 0;
+	border: 0;
+}
+
+body {
 	font-family: 'Roboto', sans-serif;
 	background-color: #edeff2;
 }
 
 .stockimage {
-	  height: 300px;
+	height: 300px;
     width: 100%;
 	background: #333;
 }
 
 .stockimage > img{
-    max-width:100%;
+    max-width: 100%;
     max-height:100%;
 
 }
